--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- include ar.js for A-Frame -->
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded  arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled: false;'>
+  <a-scene embedded  arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled: false;'>
       <a-marker type="barcode" value="0">
         <a-sphere  src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/space/earth_lights_2048.png" radius="0.5" position="0 0.5 0" rotation='0 0 0' scale="5 5 5">
           <a-animation 
