--- a/index.html
+++ b/index.html
@@ -5,11 +5,49 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ar js</title>
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 </head>
 <!-- include A-Frame obviously -->
 <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
 <!-- include ar.js for A-Frame -->
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+
+
+
+<style>
+    body {
+        font-family: 'Rubik', sans-serif;
+    }
+
+    .warner-wrapper {
+        position: absolute;
+        z-index: 100000;
+        top: 40%;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #fff;
+        font-size: 45px;
+        height: 250px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 250px;
+        border-radius: 5px;
+        padding: 15px;
+        border: 5px solid #eee;
+    }
+
+    code {
+        background-color: pink !important;
+        padding: 2px 5px;
+        border-radius: 5px;
+        color: rosybrown;
+        font-size: 35px !important; 
+    }
+
+</style>
+
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded  arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled: false;'>
       <a-marker type="barcode" value="0">
@@ -25,5 +63,41 @@
       </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
+
+  <div class="warner-wrapper">
+      <h5>Hi ✋ plz place your <code>QR-code</code> here to see the magic 🎉</h5>
+  </div>
+  <script>
+
+        var marker = document.querySelector("a-marker");
+        var earth = document.querySelector('a-sphere');
+        marker.addEventListener('markerFound', function() {
+				var div = document.querySelector("div.warner-wrapper");
+                div.setAttribute('style',"display:none;");
+				// TODO: Add your own code here to react to the marker being found.
+			});
+        marker.addEventListener('markerLost', function() {
+            // console.log('markerLost', markerId);
+            var div = document.querySelector("div.warner-wrapper");
+            div.setAttribute('style',"display:flex;");
+            // TODO: Add your own code here to react to the marker being lost.
+        });
+
+        // earth.addEventListener('load',function() {
+        // });
+        let hour = new Date().getHours();
+        if( (19 < hour < 23) || 0 < hour < 7 ) {
+            earth.setAttribute('src',"https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/space/earth_lights_2048.png");
+        }
+
+        else {
+            earth.setAttribute('src',"https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/space/earth_atmos_2048.jpg");
+            //earth_atmos_2048.jpg
+        }
+  </script>
+
+  <script>
+      
+  </script>
 </body>
 </html>
