--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
     .warner-wrapper {
         position: absolute;
         z-index: 100000;
-        top: 40%;
         left: 50%;
+        top: 20%;
         transform: translateX(-50%);
         color: #fff;
         font-size: 45px;
+        height: 100vw;
+        height: 100vw;
+    }
+
+    h5 {
         height: 250px;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         width: 250px;
+        text-align: center;
         border-radius: 5px;
         padding: 15px;
         border: 5px solid #eee;
