--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                to="0 360 0"
                repeat="indefinite"></a-animation>
        </a-sphere>
-       <a-text position="0 0.5 5" scale="3 3 3"  value="HELLO"></a-text>
+       <!-- <a-text position="0 0.5 5" scale="3 3 3"  value="HELLO"></a-text> -->
       </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
